samples/_failures_safe/1761530466_b24c15_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_16d91466.c: In function ‘evaluate_expression’:
./samples/SAFE/__tmp_16d91466.c:166:5: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ at end of input
  166 |     int valid
      |     ^~~
./samples/SAFE/__tmp_16d91466.c:166:5: error: expected declaration or statement at end of input
